--- a/src/iut/info1/othello/vue/Jeu.fxml
+++ b/src/iut/info1/othello/vue/Jeu.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.info1.othello.vue.Main">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.info1.othello.vue.ControleurJeu">
    <children>
       <ImageView fitHeight="451.0" fitWidth="610.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -26,17 +25,14 @@
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="49.0" prefWidth="610.0">
                <children>
-                  <MenuBar prefHeight="50.0" prefWidth="102.0" style="-fx-background-color: transparent; -fx-border-color: #000000; -fx-border-width: 2;">
-                     <contextMenu>
-                        <ContextMenu>
-                          <items>
-                            <MenuItem mnemonicParsing="false" text="annuler" />
-                              <MenuItem mnemonicParsing="false" text="annuler" />
-                              <MenuItem mnemonicParsing="false" text="annuler" />
-                          </items>
-                        </ContextMenu>
-                     </contextMenu>
-                  </MenuBar>
+                  <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 2;" text="Options">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Menu" />
+                      <MenuItem mnemonicParsing="false" text="Aide" />
+                        <MenuItem mnemonicParsing="false" text="Nouvelle Partie" />
+                        <MenuItem mnemonicParsing="false" text="Interrompre partie" />
+                    </items>
+                  </SplitMenuButton>
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="57.0" prefWidth="600.0">
