--- a/src/iut/info1/othello/vue/Jeu.fxml
+++ b/src/iut/info1/othello/vue/Jeu.fxml
@@ -25,7 +25,7 @@
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="49.0" prefWidth="610.0">
                <children>
-                  <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 2;" text="Options">
+                  <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 2;" text="Menu">
                     <items>
                       <MenuItem mnemonicParsing="false" text="Menu" />
                       <MenuItem mnemonicParsing="false" text="Aide" />
@@ -59,7 +59,7 @@
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="295.0" prefWidth="366.0">
                      <children>
-                        <GridPane maxHeight="280.0" maxWidth="280.0" minHeight="280.0" minWidth="280.0" prefHeight="280.0" prefWidth="280.0" style="-fx-grid-lines-visible: true;">
+                        <GridPane fx:id="pane" maxHeight="280.0" maxWidth="280.0" minHeight="280.0" minWidth="280.0" prefHeight="280.0" prefWidth="280.0" style="-fx-grid-lines-visible: true;">
                           <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
