--- a/src/iut/info1/othello/vue/MenuModeDeJeu.fxml
+++ b/src/iut/info1/othello/vue/MenuModeDeJeu.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.info1.othello.controleur.ControleurMenu">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.info1.othello.controleur.ControleurMenuModeJeu">
    <children>
       <ImageView fitHeight="451.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
