--- a/src/iut/info1/othello/vue/Jeu.fxml
+++ b/src/iut/info1/othello/vue/Jeu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -27,10 +28,10 @@
                <children>
                   <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 2;" text="Menu">
                     <items>
-                      <MenuItem mnemonicParsing="false" text="Menu" onAction="#backToMenu"/>
-                      <MenuItem mnemonicParsing="false" text="Aide" onAction = "#openAide"/>
-                        <MenuItem mnemonicParsing="false" text="Nouvelle Partie" onAction = "#startNewGame"/>
-                        <MenuItem mnemonicParsing="false" text="Interrompre partie" onAction = "#stopGame"/>
+                      <MenuItem mnemonicParsing="false" onAction="#backToMenu" style="-fx-background-color: transparent;" text="Menu" />
+                      <MenuItem mnemonicParsing="false" onAction="#openAide" style="-fx-background-color: transparent;" text="Aide" />
+                        <MenuItem mnemonicParsing="false" onAction="#startNewGame" style="-fx-background-color: transparent;" text="Nouvelle Partie" />
+                        <MenuItem mnemonicParsing="false" onAction="#stopGame" style="-fx-background-color: transparent;" text="Interrompre partie" />
                     </items>
                   </SplitMenuButton>
                </children>
@@ -660,6 +661,9 @@
                            </children>
                         </GridPane>
                      </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="295.0" prefWidth="145.0" spacing="10.0">
                      <children>
@@ -673,6 +677,14 @@
                            </font></Label>
                      </children>
                   </VBox>
+               </children>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#passerTour" style="-fx-background-color: transparent; -fx-border-color: black;" text="Passer mon tour" />
                </children>
             </HBox>
          </children>
