--- a/src/iut/info1/othello/vue/Jeu.fxml
+++ b/src/iut/info1/othello/vue/Jeu.fxml
@@ -38,7 +38,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="57.0" prefWidth="600.0">
                <children>
-                  <Label text="C'est le tour du joueur">
+                  <Label fx:id="tourDuJoueur" text="C'est le tour du joueur">
                      <font>
                         <Font size="20.0" />
                      </font></Label>
