--- a/src/iut/info1/othello/vue/Jeu.fxml
+++ b/src/iut/info1/othello/vue/Jeu.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<<<<<<< HEAD
-<?import javafx.geometry.Insets?>
-=======
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
->>>>>>> 5b530633d215ff674a3254b79eb2a2c53d7e57b2
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -34,7 +30,7 @@
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="49.0" prefWidth="610.0">
                <children>
-                  <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" onAction="#menuDeroulant" style="-fx-background-color: Transparent; -fx-border-color: black; -fx-border-width: 2;" text="Menu">
+                  <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" onAction="#MenuDeroulant" style="-fx-background-color: Transparent; -fx-border-color: black; -fx-border-width: 2;" text="Menu">
                     <items>
                       <MenuItem mnemonicParsing="false" onAction="#backToMenu" text="Menu" />
                       <MenuItem mnemonicParsing="false" onAction="#openAide" text="Aide" />
@@ -46,7 +42,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="57.0" prefWidth="600.0">
                <children>
-                  <Label fx:id="tourDuJoueur" text="C'est le tour du joueur">
+                  <Label text="C'est le tour du joueur">
                      <font>
                         <Font size="20.0" />
                      </font></Label>
@@ -669,9 +665,6 @@
                            </children>
                         </GridPane>
                      </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
                   </VBox>
                   <VBox alignment="CENTER" prefHeight="295.0" prefWidth="145.0" spacing="10.0">
                      <children>
@@ -685,14 +678,6 @@
                            </font></Label>
                      </children>
                   </VBox>
-               </children>
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#passerTour" style="-fx-background-color: transparent; -fx-border-color: black;" text="Passer mon tour" />
                </children>
             </HBox>
          </children>
