--- a/src/iut/info1/othello/vue/all.css
+++ b/src/iut/info1/othello/vue/all.css
@@ -7,5 +7,6 @@ Button.noir {
 }
 
 Button.plateau-case {
+	-fx-background-image: url("../../../../../images/Case_vide.png"); 
 	-fx-background-color: green;	
 }
