--- a/src/iut/info1/othello/vue/Jeu.fxml
+++ b/src/iut/info1/othello/vue/Jeu.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
@@ -31,7 +25,7 @@
          <children>
             <HBox alignment="TOP_RIGHT" prefHeight="49.0" prefWidth="610.0">
                <children>
-                  <SplitMenuButton mnemonicParsing="false" prefHeight="49.0" prefWidth="94.0" onAction="#MenuDeroulant" style="-fx-background-color: Transparent; -fx-border-color: black; -fx-border-width: 2;" text="Menu">
+                  <SplitMenuButton mnemonicParsing="false" onAction="#menuDeroulant" prefHeight="49.0" prefWidth="94.0" style="-fx-background-color: Transparent; -fx-border-color: black; -fx-border-width: 2;" text="Menu">
                     <items>
                       <MenuItem mnemonicParsing="false" onAction="#backToMenu" text="Menu" />
                       <MenuItem mnemonicParsing="false" onAction="#openAide" text="Aide" />
@@ -43,7 +37,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="57.0" prefWidth="600.0">
                <children>
-                  <Label text="C'est le tour du joueur">
+                  <Label text="C'est le tour du joueur" fx:id="tourDuJoueur">
                      <font>
                         <Font size="20.0" />
                      </font></Label>
