On est peut-être enfin à la fin

--- a/src/iut/info1/othello/vue/MenuModeDeJeu.fxml
+++ b/src/iut/info1/othello/vue/MenuModeDeJeu.fxml
@@ -41,7 +41,7 @@
             </Text>
             <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#creerPartiePVP" style="-fx-border-color: black; -fx-border-width: 2; -fx-background-color: transparrent;" text="Commencer">
                <font>
-                  <Font name="Comic Sans MS" size="14.0" />
+                  <Font size="14.0" />
                </font>
             </Button>
          </children>
